2011-03-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.h: added IS_BOOLEAN
	* src/SDCCast.c (getResultTypeFromType),
	* src/SDCCicode.c (geniCodeLogic, geniCodeLogicAndOr, ast2iCode),
	* src/SDCCsymt.c (computeTypeOr, computeType, compareType),
	* src/SDCCval.c (checkConstantRange): use IS_BOOLEAN
	* src/SDCCcse.c (boolCast, cseBBlock): disabled boolCast fixed bug 3223041
	* src/z80/gen.c (_toBoolean): added parameter needflag,
	  (_castBoolean, genCast): castBoolean factored out of genCast
	* support/regression/tests/bug3223041.c: modified for hc08 without _Bool

2011-03-24 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCglue.c, src/ds390/gen.c, src/ds390/gen.h,
	  src/ds390/ralloc.c, src/ds390/ralloc.h, src/SDCCptropt.c,
	  src/SDCCptropt.h, src/SDCCicode.c, src/SDCCicode.h:
	  dbuf-ized, get rid of global buffer, code cleaning,
	  use dbuf_tprintf() instead of tsprintf()

2011-03-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/ds390/spec.mk,
	* support/regression/ports/hc08/spec.mk,
	* support/regression/ports/ucz80/spec.mk: fixed output

2011-03-21 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmacro.c: fixed bug, introduced 2011-03-20:
	  call dbuf_vprintf() instead dbuf_printf() in mvsprintf()

2011-03-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genRet): forgot the _endLazyDPSEvaluation
	* support/regression/compact-results.py: new, added
	* support/regression/Makefile.in: print test name and compact results after
	  running the test for better progress insight with make -j

2011-03-21 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCval.c, src/SDCCval.h, src/SDCCast.c: dbuf-ized

2011-03-20 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCicode.c, src/SDCCicode.h, src/SDCCsymt.c, src/SDCCsymt.h,
	  src/port.h, src/SDCCast.c, src/SDCCast.h, src/SDCCBBlock.c,
	  src/SDCCBBlock.h, src/z80/main.c, src/pic16/main.c:
	  dbuf-ized, get rid of global buffer, code cleaning